@@ -1,6 +1,7 @@
 [buildout]
 develop = .
 parts = test
+find-links=http://www.tornadoweb.org/static/tornado-0.2.tar.gz
 
 [test]
 recipe = zc.recipe.testrunner
